# const_typed_builder

./: Cargo.toml  README.md  settings.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: rust.yml
const_typed_builder_derive/: Cargo.toml
const_typed_builder_derive/src/: builder.rs  builder_info.rs  context.rs  data_info.rs  field_generator.rs  field_info.rs  field_kind.rs  generator.rs  group.rs  group_generator.rs  group_info.rs  lib.rs  solver_kind.rs  struct_info.rs  symbol.rs  util.rs
const_typed_builder_derive/src/generator/: builder_generator.rs  data_generator.rs  field_generator.rs  generics_generator.rs  group_generator.rs  mod.rs  target_generator.rs
const_typed_builder_derive/src/info/: container.rs  container_info.rs  field.rs  field_info.rs  field_info_collection.rs  group.rs  group_info.rs  mod.rs  struct_info.rs
const_typed_builder_derive/src/parser/: container.rs  container_parser.rs  field.rs  field_parser.rs  group.rs  group_parser.rs  mod.rs
const_typed_builder_test/: Cargo.toml
const_typed_builder_test/compile_fail/: assume_mandatory_1.rs  assume_mandatory_1.stderr  assume_mandatory_explicit_optional_1.rs  assume_mandatory_explicit_optional_1.stderr  group_1.rs  group_1.rs_  group_1.stderr  group_2.rs  group_2.stderr  group_3.rs  group_3.stderr  group_and_mandatory_1.rs  group_and_mandatory_1.stderr  group_and_mandatory_2.rs  group_and_mandatory_2.stderr  group_and_mandatory_3.rs  group_and_mandatory_3.stderr  group_and_mandatory_4.rs  group_and_mandatory_4.stderr  group_at_least_1.rs  group_at_least_1.stderr  group_at_least_2.rs  group_at_least_2.stderr  group_at_most_1.rs  group_at_most_1.stderr  group_multiple_member_1.rs  group_multiple_member_1.stderr  group_solver_compiler_1.rs  group_solver_compiler_1.stderr  mixed_mandatory.rs  mixed_mandatory.stderr  mixed_mandatory_1.stderr  multiple_generic_multiple_mandatory_1.rs  multiple_generic_multiple_mandatory_1.stderr  multiple_generic_with_const_multiple_mandatory_1.rs  multiple_generic_with_const_multiple_mandatory_1.stderr  multiple_mandatory.stderr  multiple_mandatory_1.rs  multiple_mandatory_1.stderr  option_explicit.stderr  (+30 more)
const_typed_builder_test/pass/: empty_pass.rs
const_typed_builder_test/src/: lib.rs
src/: lib.rs
