[workspace]
members = [".", "./const_typed_builder_derive", "./const_typed_builder_test"]

[workspace.package]
description = "Compile-time type-checked builder derive using const generics"
version = "0.2.0"
authors = ["Koenichiwa <koenvwel@gmail.com>"]
repository = "https://github.com/koenichiwa/const_typed_builder/"
edition = "2021"
keywords = ["builder"]
categories = ["development-tools", "rust-patterns"]
license = "MIT"
readme = "README.md"

[package]
name = "const_typed_builder"
description.workspace = true
version.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const_typed_builder_derive = { path = "const_typed_builder_derive", version = "=0.2.0" }

[dev-dependencies]
trybuild = "1.0.84"
