[package]
name = "const_typed_builder_derive"
description.workspace = true
version.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
either = "1.9"
itertools = "0.11.0"
convert_case = "0.6"

[lib]
proc-macro = true
