[package]
name = "const_typed_builder_derive"
description.workspace = true
version.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0.32", features = ["full", "extra-traits"] }
quote = "1.0.33"
proc-macro2 = "1.0.70"
itertools = "0.12.0"
convert_case = "0.6.0"
proc-macro-error = "1.0.4"
strum = { version = "0.25.0", features = ["derive"] }

[lib]
proc-macro = true
